--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,44 @@
-<h1>Drew Jezek</h1>
+<h1>Welcome to CSE Motors!</h1>
+<div class="hero">
+    <img src="/images/vehicles/delorean.jpg" alt="Delorean sketch hero image">
+    <div class="heroCard">
+        <h2>DMC Delorean</h2>
+        <ul>
+            <p>3 Cup holders</p>
+            <p>Superman doors</p>
+            <p>Fuzzy dice!</p>
+        </ul>
+        <button>Own Today</button>
+    </div>
+</div>
+<section id="cardGrid">
+    <h3 class="title1">Delorean Upgrades</h3>
+    <h3 class="title2">DMC Delorean Reviews</h3>
+    <div id="upgrades">
+        
+        <div>
+            <div><img src="/images/upgrades/flux-cap.png" alt="flux capacitor"></div>
+            <a href="/">Flux Capacitor</a>
+        </div>
+        <div>
+            <div><img src="/images/upgrades/flame.jpg" alt="flame decal"></div>
+            <a href="/">Flame Decals</a>
+        </div>
+        <div>
+            <div><img src="/images/upgrades/bumper_sticker.jpg" alt="bumper stickers"></div>
+            <a href="/">Bumper Stickers</a>
+        </div>
+        <div>
+            <div><img src="/images/upgrades/hub-cap.jpg" alt="hub caps"></div>
+            <a href="/">Hub Caps</a>
+        </div>
+    </div>
+
+    <div id="reviews">
+        <p>"So fast it's almost like traveling in time." (4/5)</p>
+        <p>"Coolest ride on the road." (4/5)</p>
+        <p>"I'm feeling McFly!" (5/5)</p>
+        <p>"The most futuristic ride of our day." (4.5/5)</p>
+        <p>"80's living and I love it!" (5/5)</p>
+    </div>
+</section>
