--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -257,6 +257,34 @@ main {
   background-color: rgb(237, 239, 243);
 }
 
+/* login form styling */
+
+#loginFormContainer {
+  border: 1px solid black;
+  background-color: rgb(202, 202, 202);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1000px;
+}
+
+#loginForm {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin: 1rem;
+  width: 500px;
+  max-width: 100%;
+}
+
+#loginForm button {
+  margin: 10px 0;
+  background-color: var(--accent);
+  width: 100px;
+  max-width: 100%;
+}
+
 /* footer */
 footer {
   margin: 5px;
