--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -15,10 +15,12 @@
         <input type="email" placeholder="Enter Email" name="uName" required>
 
         <label for="password"><b>Password: </b></label>
-        <input type="password" placeholder="Enter Password" name="password" required>
+        <input type="password" placeholder="Enter Password" name="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
+        <div>Password requires 12 characters, at least 1 number, 1 lowercase letter, 1 capital letter, and one special
+            character.</div>
 
         <button type="submit">Login</button>
     </form>
 
-    <span id="createAccount">No account? <a href="/account/registration">Sign-up</a></span>
+    <span id="createAccount">No account? <a href="/account/register">Sign-up</a></span>
 </div>
