--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -8,7 +8,7 @@
         } %>
 
 <!-- ability to add a message -->
-<%# messages() %>
+<%- messages() %>
 
 <!-- display inventory items -->
 <%- grid %>
