--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -10,7 +10,7 @@
 
 <!-- login form -->
  <div id="loginFormContainer">
-    <form id="loginForm" action="?" method="post">
+    <form id="loginForm" action="/account/login" method="post">
         <label for="uName"><b>Email: </b></label>
         <input type="email" placeholder="Enter Email" name="uName" required>
 
