--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -22,13 +22,13 @@
  <div id="registerView">
     <form id="registerForm" action="/account/register" method="post">
         <label for="account_firstname"><b>First Name:</b></label>
-        <input type="text" name="account_firstname" id="account_firstname" required>
+        <input type="text" name="account_firstname" id="account_firstname" required value="<%= locals.account_firstname %>">
         
         <label for="account_lastname"><b>Last Name:</b></label>
-        <input type="text" name="account_lastname" id="account_lastname" required>
+        <input type="text" name="account_lastname" id="account_lastname" required value="<%= locals.account_lastname %>">
 
         <label for="account_email"><b>Email Address</b></label>
-        <input type="email" name="account_email" id="account_email" required>
+        <input type="email" name="account_email" id="account_email" required value="<%= locals.account_email %>">
 
         <label for="account_password"><b>Password</b></label>
         <input type="password" name="account_password" id="account_password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
