--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -11,13 +11,13 @@
 <!-- login form -->
  <div id="loginFormContainer">
     <form id="loginForm" action="/account/login" method="post">
-        <label for="uName"><b>Email: </b></label>
-        <input type="email" placeholder="Enter Email" name="uName" required>
+        <label for="account_email"><b>Email: </b></label>
+        <input type="email" placeholder="Enter Email" name="account_email" id="account_email" 
+               value="<%= locals.account_email || '' %>" required>
 
-        <label for="password"><b>Password: </b></label>
-        <input type="password" placeholder="Enter Password" name="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
-        <div>Password requires 12 characters, at least 1 number, 1 lowercase letter, 1 capital letter, and one special
-            character.</div>
+        <label for="account_password"><b>Password: </b></label>
+        <input type="password" placeholder="Enter Password" name="account_password" id="account_password" required>
+        <div>Please enter your password.</div>
 
         <button type="submit">Login</button>
     </form>
