--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -16,3 +16,13 @@
                 <a href="/inv/add-vehicle">Add New Vehicle</a>
             </p>
         </div>
+
+        <h2>Manage Inventory</h2>
+        <p>Choose a classification to see those inventory items.</p>
+        <%- classificationSelect %>
+
+        <table id = "inventoryDisplay"></table>
+
+        <noscript>JavaScript must be enabled to use this page.</noscript>
+
+        <script src="../../js/inventory.js"></script>
